<resources>
    <string name="app_name">WeatherApp</string>
    <string name="api_key">77f28f038e941285b2ced57658a7c712</string>

    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="moderate">Moderate</string>
    <string name="poor">Poor</string>
    <string name="very_poor">Very Poor</string>
    <string name="sunrise">Sunrise</string>
    <string name="max_temp">Max temp</string>
    <string name="feels_like">Feels like</string>
    <string name="min_temp">Min temp</string>
    <string name="air_quality">Air Quality</string>
    <string name="perfect">perfect</string>
    <string name="five_days_forecast">Five Days Forecast</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="location">DefaultLocation</string>
    <string name="updated_at">Last update: no data</string>
    <string name="_24_c">No data</string>
    <string name="pressure">Pressure</string>
    <string name="sunset">Sunset</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weathericon">WeatherIcon</string>
    <string name="lat_coord">Lat: No data</string>
    <string name="long_coords">Lon: No data</string>
    <string name="current_time">Current time</string>
    <string name="add_to_favorites">Add to fav</string>
</resources>